syntax = "proto3";

package api.global;

option go_package = "blog/api/global";
option java_multiple_files = true;
option java_package = "api.global";

message PageInfo {
  int64 pageNum = 1;
  int64 pageSize = 2;
}

message PageIndex {
  int64 start = 1;
  int64 pageSize = 2;
}